// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validateRequiredOptions should throw when accessToken is empty 1`] = `
"Please update your config file: /myHomeDir/.backport/config.json.
It must contain a valid \\"username\\" and \\"accessToken\\".

Read more: https://github.com/sqren/backport/blob/434a28b431bb58c9a014d4489a95f561e6bb2769/docs/configuration.md#global-config-backportconfigjson"
`;

exports[`validateRequiredOptions should throw when accessToken is missing 1`] = `
"Please update your config file: /myHomeDir/.backport/config.json.
It must contain a valid \\"username\\" and \\"accessToken\\".

Read more: https://github.com/sqren/backport/blob/434a28b431bb58c9a014d4489a95f561e6bb2769/docs/configuration.md#global-config-backportconfigjson"
`;

exports[`validateRequiredOptions should throw when both branches and branchChoices are missing 1`] = `
"Invalid option \\"branches\\"

You can add it with either:
 - Config file: \\".backportrc.json\\". Read more: https://github.com/sqren/backport/blob/434a28b431bb58c9a014d4489a95f561e6bb2769/docs/configuration.md#project-config-backportrcjson
 - CLI: \\"--branches 6.1\\""
`;

exports[`validateRequiredOptions should throw when upstream is empty 1`] = `
"Invalid option \\"upstream\\"

You can add it with either:
 - Config file: \\".backportrc.json\\". Read more: https://github.com/sqren/backport/blob/434a28b431bb58c9a014d4489a95f561e6bb2769/docs/configuration.md#project-config-backportrcjson
 - CLI: \\"--upstream elastic/kibana\\""
`;

exports[`validateRequiredOptions should throw when upstream is missing 1`] = `
"Invalid option \\"upstream\\"

You can add it with either:
 - Config file: \\".backportrc.json\\". Read more: https://github.com/sqren/backport/blob/434a28b431bb58c9a014d4489a95f561e6bb2769/docs/configuration.md#project-config-backportrcjson
 - CLI: \\"--upstream elastic/kibana\\""
`;

exports[`validateRequiredOptions should throw when username is empty 1`] = `
"Please update your config file: /myHomeDir/.backport/config.json.
It must contain a valid \\"username\\" and \\"accessToken\\".

Read more: https://github.com/sqren/backport/blob/434a28b431bb58c9a014d4489a95f561e6bb2769/docs/configuration.md#global-config-backportconfigjson"
`;

exports[`validateRequiredOptions should throw when username is missing 1`] = `
"Please update your config file: /myHomeDir/.backport/config.json.
It must contain a valid \\"username\\" and \\"accessToken\\".

Read more: https://github.com/sqren/backport/blob/434a28b431bb58c9a014d4489a95f561e6bb2769/docs/configuration.md#global-config-backportconfigjson"
`;
